--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.3.1",
     "leaflet-heatmap": "^1.0.0",
+    "redis": "^2.8.0",
     "socket.io": "^2.1.1"
   }
 }
